--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodeman ./bin/www",
+    "dev": "nodemon ./bin/www",
     "prod": "pm2 ./bin/www"
   },
   "dependencies": {
@@ -23,6 +23,6 @@
     "sequelize": "^5.12.3"
   },
   "devDependencies": {
-    "nodeman": "^1.1.2"
+    "nodemon": "^1.19.1"
   }
 }
