--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pm2": "^3.5.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "sqlite3": "^4.1.0"
   }
 }
