--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.1",
+    "logdna": "^3.3.0",
     "morgan": "~1.9.1",
     "pg": "^7.12.0",
     "pg-hstore": "^2.3.3",
