--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "knex": "^0.19.2",
     "logdna": "^3.3.0",
     "morgan": "~1.9.1",
+    "node-jose": "^1.1.3",
     "pg": "^7.12.0",
     "pg-hstore": "^2.3.3"
   },
