--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prod": "node ./bin/www"
   },
   "dependencies": {
+    "@sentry/node": "^5.6.2",
     "cloudinary": "^1.14.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
