--- a/package.json
+++ b/package.json
@@ -16,19 +16,23 @@
     "debug": "~4.1.1",
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
+    "express-winston": "^4.0.1",
     "http-errors": "~1.7.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.1",
-    "logdna": "^3.3.3",
     "knex": "^0.19.5",
+    "logdna": "^3.3.3",
+    "moesif-express": "^2.9.11",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "node-jose": "^1.1.3",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sha.js": "^2.4.11",
-    "snyk": "^1.234.0"
+    "snyk": "^1.234.0",
+    "winston": "^3.2.1",
+    "winston-papertrail": "^1.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.1",
