--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.1",
-    "logdna": "^3.3.3",
     "knex": "^0.19.5",
+    "logdna": "^3.3.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "node-jose": "^1.1.3",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sha.js": "^2.4.11",
-    "snyk": "^1.235.1"
+    "snyk": "^1.235.1",
+    "ws": "^7.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
